# gabbleduck

./: BetaNode.cpp  BetaNode.h  BetaPipeline.h  CMakeLists.txt  PixelAccessors.h  beta-tracing.cpp  config.h  constants.cpp  constants.h  convolve.h  eval-stats.py  extract-carbons.py  feeder.py  gabble-types.h  gabble.cpp  gabble.h  gaussian.cpp  gaussian.h  generate-mrc.bash  generate-mrcs.bash  geometry.cpp  geometry.h  github-howto.txt  howto.txt  instrument.cpp  instrument.h  jgdTotalEigenImageFilter.h  jgdTotalEigenImageFilter.txx  local-maxima.cpp  local-maxima.h  local_maxima.cpp  look.py  main.cpp  main.h  mask.h  measure-accuracy.py  node.cpp  node.h  notes-txt.txt  notes.txt  (+29 more)
report/: UserManual.txt  beta-sheet-finder-report.aux  beta-sheet-finder-report.tex  beta-sheet-presentation.odp  plane-triangles.odg  processing-flow.dot  reading1.tex  report.aux  report.tex  requirements.txt  shapes.eps  workflow.dot  workflow.ps
